--- a/app/views/products/index.html.erb
+++ b/app/views/products/index.html.erb
@@ -1,9 +1,9 @@
+<%=
+    if @isMainIndex
+      render 'products/partials/mainDisplay'
+    else
+      render 'products/partials/categoryDisplay'
+    end
+%>
 
-<!-- Example row of columns -->
-<%=  render 'products/modules/moduleMainProducts' %>
-<%=  render 'products/modules/modulePageDisplay' %>
-<hr>
 
-<footer>
-  <p>&copy; Company 2013</p>
-</footer>
